update rest endpoints

--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
                         'ibc/65D0BEC6DAD96C7F5043D1E54E54B6BB5D5B3AEC3FF6CEBB75B9E059F3580EA3': { symbol: 'USDC', addr: 'ibc/65D0BEC6DAD96C7F5043D1E54E54B6BB5D5B3AEC3FF6CEBB75B9E059F3580EA3', decimal: 6 },
                         'ibc/89EE10FCF78800B572BAAC7080AEFA301B5F3BBC51C5371E907EB129C5B900E7': { symbol: 'LBTC', addr: 'ibc/89EE10FCF78800B572BAAC7080AEFA301B5F3BBC51C5371E907EB129C5B900E7', decimal: 8 }
                     },
-                    allLCDNodes: ["https://babylon.nodes.guru/api", "https://babylon-api.polkachu.com", "https://babylon-rest.publicnode.com"],
+                    allLCDNodes: [
+					"https://babylon.nodes.guru/api", 
+					"https://babylon-api.polkachu.com", 
+					//"https://babylon-rest.publicnode.com",
+		    ],
                     swaps: [],
                     page: 0,
                     loading: false,
